2007-10-21  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed VMProcess top, as VMProcess is now used straight from
	GNU Classpath.

2007-10-10  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed --with-staticbin option.

	* FAQ/FAQ.debugging, developers/FullTest.sh: Removed --with-staticbin.

2007-10-08  Dalibor Topic  <robilad@kaffe.org>

	* config/hpux/linux/md.c: Added empty file to fix build on 
	hppa-hpux.

	* config/Makefile.am (EXTRA_DIST): Added parisc/hpux/md.c.

2007-10-08  Dalibor Topic  <robilad@kaffe.org>

	* config/parisc/linux/md.c: Added empty file to fix build on 
	hppa-linux.

	* config/Makefile.am (EXTRA_DIST): Added parisc/linux/md.c.

	Reported by:  Michael Koch  <mkoch@kaffe.org>

2007-10-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c (KaffePThread_detectStackBoundaries): 
	Removed unused else branch that caused the build to fail on hppa-linux.

	Reported by:  Michael Koch  <mkoch@kaffe.org>
	
2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* m4/libxml.m4, m4/libxslt.m4, m4/pkg.m4: Removed unused files.

2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/external/classpath/lib/org/.cvsignore: Removed.

2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/io/.cvsignore: Removed.

2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/drops-l4threads/Makefile.am (libkthread_la_SOURCES):
	Added l4thread.h.

2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/boehm-gc/Makefile.am (EXTRA_DIST),
	kaffe/kaffevm/kaffe-gc/Makefile.am (EXTRA_DIST): Added Makfile.frag.
	This ensures that the necessary defines for boehm-gc are preserved
	in builds from the tarball.
 
	* kaffe/kaffevm/boehm-gc/Makefile.frag,
	kaffe/kaffevm/kaffe-gc/Makefile.frag: Added comment where the 
	fragment is used.

2007-10-01  Dalibor Topic  <robilad@kaffe.org>

	* include/jawt.h, include/jawt_md.h:
	Removed unused files.
