@@ -1,5 +1,12 @@
 2007-10-21  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/clib/native/TimeZone.c: Removed, use the version in GNU Classpath
+	instead.
+
+	* kaffe/kaffevm/Makefile.am (libkaffevm_la_SOURCES): Removed TimeZone.c.
+
+2007-10-21  Dalibor Topic  <robilad@kaffe.org>
+
 	* TODO: Removed VMProcess top, as VMProcess is now used straight from
 	GNU Classpath.
 
